# mediaforge

./: .gitignore  PREVIEW.html  README.md  SETUP.md  index.html  package-lock.json  package.json  temp-tauri-config.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
